--- a/about.html
+++ b/about.html
@@ -7,9 +7,26 @@
   <title>Sprint Challenge - About</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/about.css">
 
 </head>
+
+<header>
+  <div class="headercontainer">
+  <nav>
+  <div class="logo">
+  <img src="img/lambda-black.png" alt="Lambda logo black">
+  </div>
+  <div class="links">
+   <a href="index.html">Home</a>
+   <a href="about.html">About</a>
+   <a href="#">Products</a>
+   <a href="#">Blog</a>
+   <a href="#">Contact</a>
+  </nav>
+  </div>
+</div>  
+</header>
 
 <body>
     <div class="container about-page">
