--- a/about.html
+++ b/about.html
@@ -45,10 +45,11 @@
     <div class="middle-con1">
       <div class="strat">
         <img src="img/about-plan.png" alt="strategy">
-        <h2>Strategy</h2></div>
+        <h2>Strategy</h2>
         <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <a href="#">Learn More</a>
       </div>
+    </div>
      <div class="middle-con2">
       <div class="howwork">
         <img src="img/about-working.png" alt="strategy">
