--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
 
 </head>
 <header>
-    <nav>
+<nav>
     <div class="headercontainer">
     <div class="logo">
     <img src="img/lambda-black.png" alt="Lambda logo black">
      <a href="/index.html">Home</a>
-     <a href="/about.html">About</a>
+     <a href="about.html">About</a>
      <a href="#">Products</a>
      <a href="#">Blog</a>
      <a href="#">Contact</a>
     </nav>
     </div>
-</div>  
-</header>
+</div>
 
-<body>
+
     <div class="highwayimage">
         <img src="img/jumbo.jpg" alt="Highway at night">
     </div>
+</header>
+<body>
     <div class="container">
    
         <section class="top-content">
