--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="headercontainer">
     <div class="logo">
     <img src="img/lambda-black.png" alt="Lambda logo black">
-     <a href="/index.html">Home</a>
+     <a href="index.html">Home</a>
      <a href="about.html">About</a>
      <a href="#">Products</a>
      <a href="#">Blog</a>
@@ -81,8 +81,8 @@
         
         <footer>
             <nav>
-                <a href="/index.html">Home</a>
-                <a href="/about.html">About</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
